# ableton

./: .gitignore  260327_최종본_v2.07_song_form_added.json  260329 1번째곡 피드백.txt  260329_최종본_v2.09_analysis_no_unobserved_7th_guardrail.json  CHANGELOG.md  CLAUDE.md  CREDITS.md  DB구성 EXE 피드백.txt  MidiGPT_5차대응_개발자회신_2026-04-15.txt  MidiGPT_6차_베타리포트_개발자전달용.txt  MidiGPT_7차_베타리포트_개발자전달용.txt  MidiGPT_7차대응_개발자회신_2026-04-20.txt  MidiGPT_8차_베타리포트_개발자전달용.txt  MidiGPT_9차_베타리포트_개발자전달용.txt  MidiGPT_9차대응_개발자회신_2026-04-21.txt  MidiGPT_개발자전달용_커서형작곡모델_정리_2026-04-21.txt  MidiGPT_개발자전달용_현재구조_결함리스트_2026-04-21.md  MidiGPT_버그리포트_2차_개발자전달용.txt  MidiGPT_버그리포트_3차_개발자정리본.txt  MidiGPT_버그리포트_4차_개발자정리본.txt  MidiGPT_버그리포트_5차_개발자정리본.txt  MidiGPT_버그리포트_개발자응답_2026-04-08.md  MidiGPT_버그리포트_개발자전달용 (1).txt  MidiGPT_아키텍처_개선제안서_v2.docx  QUICKSTART.md  README.en.md  README.md  Troubleshooter  background.js  build_exe.py  content-suno.js  manifest.json  requirements-audio2midi.txt  requirements.txt  retrain_after_classifier_fix.md  settings.json  start_agents.sh  test_classifier.py  test_generate.py  test_generate2.py  (+15 more)
Homepage/: README  README.md
Suno/: content-suhbway.js  content-suno.js
TEST MIDI/: CITY POP 105 4-4 ALL +1.mid  CITY POP 105 4-4 ALL +2.mid  CITY POP 105 4-4 ALL +3.mid  CITY POP 105 4-4 ALL +4.mid  CITY POP 105 4-4 ALL +5.mid  CITY POP 105 4-4 ALL +6.mid  CITY POP 105 4-4 ALL -1.mid  CITY POP 105 4-4 ALL -2.mid  CITY POP 105 4-4 ALL -3.mid  CITY POP 105 4-4 ALL -4.mid  CITY POP 105 4-4 ALL -5.mid  CITY POP 105 4-4 ALL.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO +1.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO +2.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO +3.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO +4.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO +5.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO +6.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO -1.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO -2.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO -3.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO -4.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO -5.mid  CITY POP 105 4-4 BASS_FINGER E.PIANO SYNTHPAD VIOLIN_LEGATO1 VIOLIN2_LEGATO.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO +1.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO +2.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO +3.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO +4.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO +5.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO +6.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO -1.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO -2.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO -3.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO -4.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO -5.mid  CITY POP 105 4-4 DRUM BASS_FINGER E.GUITAR1 E.GUITAR1_MUTE E.GUITAR2 VIOLIN_LEGATO1 VIOLIN2_LEGATO.mid  CITY POP 105 4-4 DRUM E.PIANO +1.mid  (+128 more)
agents/: audio2midi.py  (+8 more)
juce_app/: CMakeLists.txt  build.bat  build.ps1
juce_app/Source/: Main.cpp  auto_test.cpp  beep_test.cpp  test_audio.cpp
juce_app/Source/AI/: AIEngine.cpp  AIEngine.h
juce_app/Source/Core/: AudioEngine.cpp  AudioEngine.h  MidiEngine.cpp  MidiEngine.h  PluginHost.cpp  PluginHost.h  ProjectState.cpp  ProjectState.h  SynthEngine.cpp  SynthEngine.h  TrackProcessor.cpp  TrackProcessor.h
juce_app/Source/UI/: DetailView.cpp  DetailView.h  FileBrowser.cpp  FileBrowser.h  LookAndFeel.cpp  LookAndFeel.h  MainWindow.cpp  MainWindow.h  MixerPanel.cpp  MixerPanel.h  PianoRoll.cpp  PianoRoll.h  SessionView.cpp  SessionView.h  TransportBar.cpp  TransportBar.h
juce_daw_clean/: CMakeLists.txt  README.md  README_CLEAN_ROOM.md  build.bat  smoke.bat
juce_daw_clean/Source/: AIBridge.cpp  AIBridge.h  Main.cpp  MainWindow.cpp  MainWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce_daw_clean/Source/AI/: AIBridge.cpp  AIBridge.h  AIPanel.cpp  AIPanel.h
juce_daw_clean/Source/Audio/: AudioClip.h  ClipStretchUtil.cpp  ClipStretchUtil.h  OfflineRenderer.cpp  OfflineRenderer.h  ResamplerWrapper.cpp  ResamplerWrapper.h  TimeStretchWrapper.cpp  TimeStretchWrapper.h
juce_daw_clean/Source/Automation/: AutomationEditor.cpp  AutomationEditor.h  AutomationLane.h
juce_daw_clean/Source/Command/: EditCommands.cpp  EditCommands.h
juce_daw_clean/Source/Core/: AudioEngine.cpp  AudioEngine.h  Bus.h  Groove.h  MidiEngine.cpp  MidiEngine.h  MidiTransforms.h  SynthEngine.cpp  SynthEngine.h  TrackModel.cpp  TrackModel.h
juce_daw_clean/Source/Plugin/: PluginBrowser.cpp  PluginBrowser.h  PluginEditorWindow.cpp  PluginEditorWindow.h  PluginHost.cpp  PluginHost.h  TrackPluginChain.h
juce_daw_clean/Source/PluginUI/: I18n.h  MiniPianoRoll.cpp  MiniPianoRoll.h  PerformanceHUD.h  PluginLogger.h  PresetManager.h  SampleGallery.h  TutorialOverlay.h
juce_daw_clean/Source/UI/: ArrangementView.cpp  ArrangementView.h  CCLane.cpp  CCLane.h  LookAndFeel.cpp  LookAndFeel.h  MixerPanel.cpp  MixerPanel.h  PianoRoll.cpp  PianoRoll.h  ScoreView.cpp  ScoreView.h  StepSeqView.cpp  StepSeqView.h  TransportBar.cpp  TransportBar.h
juce_daw_clean/tests/: test_resampler.cpp  test_stretch.cpp
(+711 files in other folders)
